--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+isdnutils (1:3.9.20060704+dfsg.3-4) unstable; urgency=low
+
+  * smooth out upgrades from b0rked libcapi20 packages. Closes: #656204
+  * debian/init.d.functions: completely drop udev probing. Closes: #644315
+  * debian/isdnlog.postinst: update path to isdnlog.DEVICE. Closes: #661074
+    the file was moved around recently. My apologies for the regression.
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Fri, 24 Feb 2012 23:07:18 +0800
+
 isdnutils (1:3.9.20060704+dfsg.3-3) unstable; urgency=low
 
   * libcapi20-{3,dev}: *.so files ought to be shipped in -dev package
