--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+isdnutils (1:3.22+dfsg1-1) experimental; urgency=low
+
+  * NEW UPSTREAM release after 6 years of inactivity, Yay!
+    - many of our patches were included upstream and can be dropped
+    - fix authentication of local to remote host. Closes: #348943
+    - update German cellphone network number prefixes. Closes: #404458
+    - update incorrect information in avmcapictrl(8). Closes: 309557
+      Many thanks to Peter Marschall for providing the patch.
+    - prevent symbol lookup error in libcapi. Closes: #655086
+  * update debian/copyright
+  * debian/control:
+    - add ppp-dev to build-time dependencies
+    - update some long descriptions
+  * debian/po/: update translation files
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Fri, 13 Apr 2012 05:50:52 +0800
+
 isdnutils (1:3.9.20060704+dfsg.3-5) unstable; urgency=low
 
   * isdnutils-base: drop code related to card firmware loading
