--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.22+dfsg1-6) unstable; urgency=low
+
+  * {isdnlog,ipppd}: protect more db_* calls with "||true". Closes:#671877
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Tue, 08 May 2012 04:30:04 +0800
+
 isdnutils (1:3.22+dfsg1-5) unstable; urgency=low
 
   * debian/rules: move to something resembling dh7 rules.tiny
