--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -15,14 +15,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 
 #. Type: error
 #. Description
@@ -459,6 +459,20 @@ msgid ""
 msgstr ""
 "Això és usat per a establir un número per defecte, p.e. quan les taules de "
 "les tarifes són usades per a calcular el cost d'una trucada."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid "Country's ISO two-letter code:"
+msgstr ""
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
