--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2011-05-10 17:30+01:00\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -90,8 +91,8 @@ msgid ""
 "Valid interface names begin with \"ippp\" followed by a number between 0 and "
 "63."
 msgstr ""
-"Gyldige grænsefladenavne begynder med »ippp« efterfulgt af et tal mellem 0 og "
-"63."
+"Gyldige grænsefladenavne begynder med »ippp« efterfulgt af et tal mellem 0 "
+"og 63."
 
 #. Type: string
 #. Description
@@ -398,6 +399,22 @@ msgstr ""
 
 #. Type: string
 #. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Landes ITU-kode:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
+
+#. Type: string
+#. Description
 #: ../isdnlog.templates:4001
 msgid "Prefix to dial before international number:"
 msgstr "Præfiks til brug for internationalt nummer:"
@@ -620,8 +637,8 @@ msgid ""
 "The home directory \"${DIR}\" for user \"${USER}\" does not exist. This "
 "means that the file \"${DIR}/.vbox.conf\" cannot be created."
 msgstr ""
-"Hjemmemappen »${DIR}« for bruger »${USER}« findes ikke. Dette betyder at filen "
-"»${DIR}/.vbox.conf« ikke kan oprettes."
+"Hjemmemappen »${DIR}« for bruger »${USER}« findes ikke. Dette betyder at "
+"filen »${DIR}/.vbox.conf« ikke kan oprettes."
 
 #. Type: error
 #. Description
