--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 3.8\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-17 23:01+0200\n"
 "Last-Translator: Thomas Mueller <thomas.mueller@tmit.eu>\n"
 "Language-Team: Deutsch <debian-l10n-german@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
@@ -412,6 +412,22 @@ msgstr ""
 
 #. Type: string
 #. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Landesvorwahl:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
+
+#. Type: string
+#. Description
 #: ../isdnlog.templates:4001
 msgid "Prefix to dial before international number:"
 msgstr "Vorwahl für eine internationale Nummer:"
@@ -638,8 +654,8 @@ msgid ""
 "The home directory \"${DIR}\" for user \"${USER}\" does not exist. This "
 "means that the file \"${DIR}/.vbox.conf\" cannot be created."
 msgstr ""
-"Das Home-Verzeichnis »${DIR}« für den Benutzer »${USER}« existiert nicht. Das "
-"bedeutet, dass die Datei »${DIR}/.vbox.conf« nicht erstellt werden kann."
+"Das Home-Verzeichnis »${DIR}« für den Benutzer »${USER}« existiert nicht. "
+"Das bedeutet, dass die Datei »${DIR}/.vbox.conf« nicht erstellt werden kann."
 
 #. Type: error
 #. Description
