--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -28,14 +28,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 1:3.9.20060704-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-14 12:00+0200\n"
 "Last-Translator: Francisco Javier Cuadrado <fcocuadrado@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 
 #. Type: error
 #. Description
@@ -243,8 +243,8 @@ msgid ""
 "a new entry with the data you just entered will be inserted."
 msgstr ""
 "El nombre de usuario que introdujo para la identificación en su ISP ya está "
-"en el archivo «/etc/ppp/pap-secrets». Se comentará la entrada existente, y se "
-"insertará una nueva entrada con los datos que acaba de introducir."
+"en el archivo «/etc/ppp/pap-secrets». Se comentará la entrada existente, y "
+"se insertará una nueva entrada con los datos que acaba de introducir."
 
 #. Type: error
 #. Description
@@ -281,8 +281,8 @@ msgid ""
 "inserted."
 msgstr ""
 "El nombre de usuario que introdujo para la identificación en su ISP ya está "
-"en los archivos «chap-secrets» y «pap-secrets» del directorio «/etc/ppp/». Se "
-"comentará la entrada existente, y se insertará una nueva entrada con los "
+"en los archivos «chap-secrets» y «pap-secrets» del directorio «/etc/ppp/». "
+"Se comentará la entrada existente, y se insertará una nueva entrada con los "
 "datos que acaba de introducir."
 
 #. Type: error
@@ -420,6 +420,22 @@ msgid ""
 msgstr ""
 "Escoja el país local. Éste se utilizará para configurar la tabla de tasas "
 "utilizada para calcular los costes de las llamadas."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Código ITU del país:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
@@ -646,8 +662,9 @@ msgid ""
 "The home directory \"${DIR}\" for user \"${USER}\" does not exist. This "
 "means that the file \"${DIR}/.vbox.conf\" cannot be created."
 msgstr ""
-"No existe el directorio personal («home») «${DIR}» para el usuario «${USER}». "
-"Esto significa que el archivo «${DIR}/.vbox.conf» no se puede crear."
+"No existe el directorio personal («home») «${DIR}» para el usuario "
+"«${USER}». Esto significa que el archivo «${DIR}/.vbox.conf» no se puede "
+"crear."
 
 #. Type: error
 #. Description
@@ -664,8 +681,8 @@ msgid ""
 "username, or after creating the user."
 msgstr ""
 "El usuario «${USER}» no existe en el sistema. Ejecute de nuevo el proceso de "
-"configuración mediante «dpkg-reconfigure isdnvboxserver» para introducir otro "
-"nombre de usuario, o después de haber creado el usuario."
+"configuración mediante «dpkg-reconfigure isdnvboxserver» para introducir "
+"otro nombre de usuario, o después de haber creado el usuario."
 
 #. Type: boolean
 #. Description
