--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -10,14 +10,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1:3.3-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-14 19:33+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -51,9 +51,9 @@ msgstr ""
 "Si, pour l'instant rien ne fonctionne et que vous vouliez essayer la "
 "configuration automatique, arrêtez tous les processus RNIS avec la commande "
 "« /etc/init.d/isdnutils stop », supprimez les fichiers mentionnés "
-"précédemment et relancez la configuration avec la commande « dpkg-reconfigure "
-"ipppd ». Ensuite relancez les processus RNIS avec la commande « /etc/init.d/"
-"isdnutils start »."
+"précédemment et relancez la configuration avec la commande « dpkg-"
+"reconfigure ipppd ». Ensuite relancez les processus RNIS avec la commande « /"
+"etc/init.d/isdnutils start »."
 
 #. Type: string
 #. Description
@@ -406,6 +406,22 @@ msgid ""
 msgstr ""
 "Veuillez indiquer le pays local. Ce choix définit les tables de calcul "
 "utilisées pour calculer le prix d'un appel."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Code ITU du pays :"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
@@ -1320,7 +1336,8 @@ msgstr ""
 #~ "See `man vbox.conf' for information on changing this file."
 #~ msgstr ""
 #~ "Le fichier de configuration ${OLD} est maintenant ${DIR}/.vbox.conf. "
-#~ "Veuillez consulter « man vbox.conf » si vous souhaitez modifier ce fichier."
+#~ "Veuillez consulter « man vbox.conf » si vous souhaitez modifier ce "
+#~ "fichier."
 
 #~ msgid ""
 #~ "This is the number complete with areacode, any necessary leading zeroes "
