--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-11-04 20:57+0100\n"
 "Last-Translator: Marce Villarino <mvillarino@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: gl\n"
 "X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
@@ -47,10 +47,10 @@ msgid ""
 "start\"."
 msgstr ""
 "Se aínda non funciona e quere probar a configuración automática, deteña "
-"todos os procesos de RDSI (empregue «/etc/init.d/isdnutils stop»), elimine os "
-"ficheiros que se mencionan enriba e volva executar a configuración mediante "
-"«dpkg-reconfigure ipppd». Despois de facelo, volva iniciar os procesos de "
-"RDSI: «/etc/init.d/isdnutils start»."
+"todos os procesos de RDSI (empregue «/etc/init.d/isdnutils stop»), elimine "
+"os ficheiros que se mencionan enriba e volva executar a configuración "
+"mediante «dpkg-reconfigure ipppd». Despois de facelo, volva iniciar os "
+"procesos de RDSI: «/etc/init.d/isdnutils start»."
 
 #. Type: string
 #. Description
@@ -95,8 +95,8 @@ msgid ""
 "Valid interface names begin with \"ippp\" followed by a number between 0 and "
 "63."
 msgstr ""
-"Os nomes de interface válidos comezan por «ippp» e van seguidos por un número "
-"entre 0 e 63."
+"Os nomes de interface válidos comezan por «ippp» e van seguidos por un "
+"número entre 0 e 63."
 
 #. Type: string
 #. Description
@@ -405,6 +405,22 @@ msgstr ""
 
 #. Type: string
 #. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Código ITU do país:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
+
+#. Type: string
+#. Description
 #: ../isdnlog.templates:4001
 msgid "Prefix to dial before international number:"
 msgstr "Prefixo a marcar antes dun número internacional:"
@@ -626,8 +642,8 @@ msgid ""
 "The home directory \"${DIR}\" for user \"${USER}\" does not exist. This "
 "means that the file \"${DIR}/.vbox.conf\" cannot be created."
 msgstr ""
-"Non existe o directorio persoal «${DIR}» do usuario «${USER}». Isto significa "
-"que non se pode crear o ficheiro «${DIR}/.vbox.conf»."
+"Non existe o directorio persoal «${DIR}» do usuario «${USER}». Isto "
+"significa que non se pode crear o ficheiro «${DIR}/.vbox.conf»."
 
 #. Type: error
 #. Description
