--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 3.9.20060704+dfsg.2-8\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2011-05-16 10:28+0200\n"
 "Last-Translator: Jeroen Schot <schot@a-eskwadraat.nl>\n"
 "Language-Team: Debian l10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nl\n"
 
 #. Type: error
 #. Description
@@ -401,6 +401,22 @@ msgid ""
 msgstr ""
 "Selecteer uw land. Dit wordt gebruikt om een standaardwaarden in te stellen, "
 "b.v. welke tabellen gebruikt worden om de kosten te berekenen."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Landnummer:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
