--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils_1:3.9.20060704-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-18 22:54+0100\n"
 "Last-Translator: Pedro Ribeiro <p.m42.ribeiro@gmail.com>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt\n"
 "X-Poedit-Language: Portuguese\n"
 "X-Poedit-Country: PORTUGAL\n"
 
@@ -396,6 +396,22 @@ msgstr ""
 
 #. Type: string
 #. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Código ITU do país:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
+
+#. Type: string
+#. Description
 #: ../isdnlog.templates:4001
 msgid "Prefix to dial before international number:"
 msgstr "Prefixo de chamada internacional:"
@@ -476,8 +492,8 @@ msgid ""
 "often be dropped."
 msgstr ""
 "O vbox precisa de saber que número atender. Dependendo do sistema RDIS em "
-"uso no país, isto pode ou não incluir indicativos. Normalmente não tem o \"0"
-"\" inicial."
+"uso no país, isto pode ou não incluir indicativos. Normalmente não tem o "
+"\"0\" inicial."
 
 #. Type: string
 #. Description
