--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -8,17 +8,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 1:3.9.20060704-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-26 15:10+0300\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: error
 #. Description
@@ -394,6 +394,22 @@ msgid ""
 msgstr ""
 "Укажите вашу страну. Она используется для настройки таблицы тарифов по "
 "расчёту стоимости звонка."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "ITU-код страны:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
