--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 1:3.8.2005-12-06-4\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-15 22:22+0100\n"
 "Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n.swedish@lists.debian.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sv\n"
 
 #. Type: error
 #. Description
@@ -392,6 +392,22 @@ msgid ""
 msgstr ""
 "Ange aktuellt land. Detta används för att inställningarna för "
 "kostnadsberäkning ska bli korrekt."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Landets ITU-kod:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
