--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnvboxserver\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2007-01-29 11:24+0200\n"
 "Last-Translator: Mehmet Türker <mturker@innova.com.tr>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 
 #. Type: error
 #. Description
@@ -482,6 +482,20 @@ msgid ""
 msgstr ""
 "Bu, birkaç öntanımlı değeri tanımlamak için kullanılır, ör. bir aramanın "
 "maliyetini hesaplamakta gerekecek oran tabloları."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid "Country's ISO two-letter code:"
+msgstr ""
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
