--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 1:3.9.20060704-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-13 15:17+0800\n"
+"POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-14 19:48+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: vi\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: LocFactoryEditor 1.8\n"
 
@@ -31,9 +31,9 @@ msgid ""
 "ipppd configuration phase won't touch anything there, as it looks like it "
 "has already been configured."
 msgstr ""
-"Hai tập tin « device.${IPPP0} » và « ipppd.${IPPP0} » đã có. Vì vậy, giai đoạn "
-"cấu hình ipppd này sẽ không sửa đổi gì trong hai tập tin này, có vẻ là nó đã "
-"được cấu hình về trước."
+"Hai tập tin « device.${IPPP0} » và « ipppd.${IPPP0} » đã có. Vì vậy, giai "
+"đoạn cấu hình ipppd này sẽ không sửa đổi gì trong hai tập tin này, có vẻ là "
+"nó đã được cấu hình về trước."
 
 #. Type: error
 #. Description
@@ -91,7 +91,8 @@ msgstr "Sai đặt tên giao diện"
 msgid ""
 "Valid interface names begin with \"ippp\" followed by a number between 0 and "
 "63."
-msgstr "Tên giao diện đúng chứa « ippp » và một số từ 0 đến 63, v.d. « ippp3 »."
+msgstr ""
+"Tên giao diện đúng chứa « ippp » và một số từ 0 đến 63, v.d. « ippp3 »."
 
 #. Type: string
 #. Description
@@ -194,8 +195,8 @@ msgid ""
 "will be kept in /etc/ppp/pap-secrets and /etc/ppp/chap-secrets together with "
 "the account name."
 msgstr ""
-"Hãy gõ mật khẩu cần sử dụng khi kết nối tới ISP. Mật khẩu này được lưu vào « /"
-"etc/ppp/pap-secrets » và « /etc/ppp/chap-secrets » cùng với tên tài khoản."
+"Hãy gõ mật khẩu cần sử dụng khi kết nối tới ISP. Mật khẩu này được lưu vào "
+"« /etc/ppp/pap-secrets » và « /etc/ppp/chap-secrets » cùng với tên tài khoản."
 
 #. Type: error
 #. Description
@@ -211,9 +212,9 @@ msgid ""
 "the /etc/ppp/pap-secrets file. The existing entry will be commented out, and "
 "a new entry with the data you just entered will be inserted."
 msgstr ""
-"Để đăng nhập vào ISP, bạn đã gõ một tên người dùng đã có trong tập tin « /etc/"
-"ppp/pap-secrets ». Phần mềm này sẽ ghi chú tắt mục nhập đã có, và tạo một "
-"mục nhập khác với dữ liệu bạn mới gõ vào."
+"Để đăng nhập vào ISP, bạn đã gõ một tên người dùng đã có trong tập tin « /"
+"etc/ppp/pap-secrets ». Phần mềm này sẽ ghi chú tắt mục nhập đã có, và tạo "
+"một mục nhập khác với dữ liệu bạn mới gõ vào."
 
 #. Type: error
 #. Description
@@ -229,9 +230,9 @@ msgid ""
 "the /etc/ppp/chap-secrets file. The existing entry will be commented out, "
 "and a new entry with the data you just entered will be inserted."
 msgstr ""
-"Để đăng nhập vào ISP, bạn đã gõ một tên người dùng đã có trong tập tin « /etc/"
-"ppp/chap-secrets ». Phần mềm này sẽ ghi chú tắt mục nhập đã có, và tạo một "
-"mục nhập khác với dữ liệu bạn mới gõ vào."
+"Để đăng nhập vào ISP, bạn đã gõ một tên người dùng đã có trong tập tin « /"
+"etc/ppp/chap-secrets ». Phần mềm này sẽ ghi chú tắt mục nhập đã có, và tạo "
+"một mục nhập khác với dữ liệu bạn mới gõ vào."
 
 #. Type: error
 #. Description
@@ -265,8 +266,8 @@ msgid ""
 "There is no /etc/init.d/isdnutils on this system; hence you will have to "
 "stop and start any ipppd daemons manually."
 msgstr ""
-"Không có tập tin « /etc/init.d/isdnutils » trên hệ thống này thì bạn cần phải "
-"tự dừng chạy và khởi chạy trình nền (dæmon) ippd nào."
+"Không có tập tin « /etc/init.d/isdnutils » trên hệ thống này thì bạn cần "
+"phải tự dừng chạy và khởi chạy trình nền (dæmon) ippd nào."
 
 #. Type: error
 #. Description
@@ -387,6 +388,22 @@ msgid ""
 msgstr ""
 "Hãy chọn quốc gia ở. Thông tin này được sử dụng để đặt bảng giá cần dùng khi "
 "tính chi phí gọi."
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+#, fuzzy
+#| msgid "Country ITU code:"
+msgid "Country's ISO two-letter code:"
+msgstr "Mã ITU quốc gia:"
+
+#. Type: string
+#. Description
+#: ../isdnlog.templates:3001
+msgid ""
+"Please enter the ISO code of the local country. As no rate tables are "
+"available, this setting will be unused."
+msgstr ""
 
 #. Type: string
 #. Description
@@ -659,10 +676,10 @@ msgid ""
 "name is used in inittab while devfs is not mounted, or the non-devfs name is "
 "used while devfs is mounted."
 msgstr ""
-"Mục nhập cho « vboxgetty » trong « /etc/inittab » dùng một tên thiết bị không "
-"tương ứng với cách sử dụng « devfs » hiện thời: hoặc một tên « devfs » (/dev/"
-"isdn/ttyIxx) được dùng trong « inittab » khi chưa gắn kết « devfs », hoặc tên "
-"khác « devfs » được dùng khi « devfs » được gắn kết."
+"Mục nhập cho « vboxgetty » trong « /etc/inittab » dùng một tên thiết bị "
+"không tương ứng với cách sử dụng « devfs » hiện thời: hoặc một tên « devfs "
+"» (/dev/isdn/ttyIxx) được dùng trong « inittab » khi chưa gắn kết « devfs », "
+"hoặc tên khác « devfs » được dùng khi « devfs » được gắn kết."
 
 #. Type: error
 #. Description
@@ -688,9 +705,9 @@ msgid ""
 "name is used while devfs is mounted."
 msgstr ""
 "Mục nhập thiết bị trong « /etc/isdn/vboxgetty.conf » dùng một tên thiết bị "
-"không tương ứng với cách sử dụng « devfs » hiện thời: hoặc có một tên « devfs "
-"» (/dev/isdn/ttyIxx) được dùng trong « vboxgetty.conf » khi chưa gắn kết « "
-"devfs », hoặc tên khác « devfs » được dùng khi « devfs » được gắn kết."
+"không tương ứng với cách sử dụng « devfs » hiện thời: hoặc có một tên « "
+"devfs » (/dev/isdn/ttyIxx) được dùng trong « vboxgetty.conf » khi chưa gắn "
+"kết « devfs », hoặc tên khác « devfs » được dùng khi « devfs » được gắn kết."
 
 #~ msgid "/etc/ppp/ip-up.d/00-isdnutils still exists"
 #~ msgstr "«/etc/ppp/ip-up.d/00-isdnutils » vẫn còn tồn tại"
@@ -703,8 +720,8 @@ msgstr ""
 #~ msgstr ""
 #~ "Tập tin « /etc/ppp/ip-up.d/00-isdnutils » bắt nguồn từ gói isdnutils cũ "
 #~ "vẫn còn tồn tại. Nếu bạn đã thay đổi tập tin đó vào lúc nào, bạn có thể "
-#~ "cần phải làm lại các thay đổi đó trong tập tin « 00-ipppd » (tên mới). Sau "
-#~ "đó, hãy xoá tập tin « 00-isdnutils » cũ."
+#~ "cần phải làm lại các thay đổi đó trong tập tin « 00-ipppd » (tên mới). "
+#~ "Sau đó, hãy xoá tập tin « 00-isdnutils » cũ."
 
 #~ msgid ""
 #~ "Until it is deleted, it will still be used. This may cause conflicts."
@@ -723,8 +740,8 @@ msgstr ""
 #~ msgstr ""
 #~ "Tập tin « /etc/ppp/ip-up.d/99-isdnutils » bắt nguồn từ gói isdnutils cũ "
 #~ "vẫn còn tồn tại. Nếu bạn đã thay đổi tập tin đó vào lúc nào, bạn có thể "
-#~ "cần phải làm lại các thay đổi đó trong tập tin « 99-ipppd » (tên mới). Sau "
-#~ "đó, hãy xoá tập tin « 99-isdnutils » cũ."
+#~ "cần phải làm lại các thay đổi đó trong tập tin « 99-ipppd » (tên mới). "
+#~ "Sau đó, hãy xoá tập tin « 99-isdnutils » cũ."
 
 #~ msgid "old /etc/ppp/ip-up.d and ip-down.d scripts still exist"
 #~ msgstr "Văn lệnh « /etc/ppp/ip-up.d » và « ip-down.d » vẫn còn tồn tại"
@@ -739,8 +756,8 @@ msgstr ""
 #~ "Tập tin « /etc/ppp/ip-up.d/00-isdnutils » và « /etc/ppp/ip-down.d/99-"
 #~ "isdnutils » bắt nguồn từ gói isdnutils cũ vẫn còn tồn tại. Nếu bạn đã "
 #~ "thay đổi tập tin đó vào lúc nào, bạn có thể cần phải làm lại các thay đổi "
-#~ "đó trong tập tin « 00-ipppd » và « 99-ippd » (các tên mới). Sau đó, hãy xoá "
-#~ "tập tin « 00-isdnutils » và « 99-isdnutils » cũ."
+#~ "đó trong tập tin « 00-ipppd » và « 99-ippd » (các tên mới). Sau đó, hãy "
+#~ "xoá tập tin « 00-isdnutils » và « 99-isdnutils » cũ."
 
 #~ msgid ""
 #~ "Until they are deleted, they will still be used. This may cause conflicts."
