--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-10-17 23:01+0200\n"
 "Last-Translator: Thomas Mueller <thomas.mueller@tmit.eu>\n"
 "Language-Team: Deutsch <debian-l10n-german@lists.debian.org>\n"
-"Language: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
