--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-11-04 20:57+0100\n"
 "Last-Translator: Marce Villarino <mvillarino@gmail.com>\n"
-"Language-Team: Galician <proxecto@trasno.net>\n"
+"Language-Team: Galician <proxecto@trasno.net>, Galician <debian-l10n-galician@lists.debian.org>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
