--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2009-10-18 22:54+0100\n"
 "Last-Translator: Pedro Ribeiro <p.m42.ribeiro@gmail.com>\n"
-"Language-Team: Portuguese <traduz@debianpt.org>\n"
+"Language-Team: Portuguese <traduz@debianpt.org>, Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
