--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
 "PO-Revision-Date: 2007-01-29 11:24+0200\n"
 "Last-Translator: Mehmet Türker <mturker@innova.com.tr>\n"
-"Language-Team: Turkish <gnome-turk@gnome.org>\n"
+"Language-Team: Turkish <gnome-turk@gnome.org>, Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
