update French translation
Closes: #686910

--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -48,7 +48,7 @@ msgid ""
 "ipppd\". After that, restart the ISDN processes with \"/etc/init.d/isdnutils "
 "start\"."
 msgstr ""
-"Si, pour l'instant rien ne fonctionne et si vous voulez essayer la "
+"Si rien ne fonctionne pour l'instant et si vous voulez essayer la "
 "configuration automatique, arrêtez tous les processus RNIS avec la commande "
 "« /etc/init.d/isdnutils stop », supprimez les fichiers mentionnés "
 "précédemment et relancez la configuration avec la commande « dpkg-"
